# uv-scrollguard

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/uv_scrollguard/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_discovery.py  test_e2e.py
